update and add configuration

--- a/client/add-user/add-user.html
+++ b/client/add-user/add-user.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Register</title>
+    <link rel="stylesheet" href="add-user.css">
 </head>
 
 <body>
@@ -14,6 +14,10 @@
         <div class="phone">
             <div class="phone_mic"></div>
             <div class="phone_screen" id="phone_screen">
+                <div class="selector">
+                    <div class="select non-active" onclick="location.href = '../login/login.html' ">Login</div>
+                    <div class="select active">Register</div>
+                </div>
                 <form method="post" id="register">
                     <div class="row">
                         <div>
@@ -54,8 +58,10 @@
             <div class="phone_button"></div>
         </div>
     </div>
-
+    <script src="../configuration.js"></script>
+    <script src="../helpers/http-server.js"></script>
     <script src="add-user.js"></script>
+    <script src="../models/user-model.js"></script>
 </body>
 
 </html>
