--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,10 @@
         </div>
     </div>
 
+    <script src="configuration.js"></script>
+    <script src="helpers/http-server.js"></script>
     <script src="index.js"></script>
+    <script src="models/user-model.js"></script>
 </body>
 
 </html>
