--- a/client/messages/messages.html
+++ b/client/messages/messages.html
@@ -37,7 +37,12 @@
         <source src="../../../../../images/new_message.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio> -->
+      <script src="../configuration.js"></script>
+      <script src="../helpers/http-server.js"></script>
         <script src="messages.js"></script>
+        <script src="../models/message-model.js"></script>
+        
+        
     </body>
 
 </html>
