--- a/client/add-user/add-user.html
+++ b/client/add-user/add-user.html
@@ -32,7 +32,7 @@
                         <div>
                             <label for="email">Type your Email</label>
                         </div>
-                        <div>
+                        <div id="email-box">
                             <input type="text" name="email" id="email">
                         </div>
                     </div>
@@ -60,8 +60,9 @@
     </div>
     <script src="../configuration.js"></script>
     <script src="../helpers/http-server.js"></script>
-    <script src="add-user.js"></script>
     <script src="../models/user-model.js"></script>
+    <script src="../helpers/show-errors.js"></script>
+    <script src="add-user.js"></script>
 </body>
 
 </html>
