--- a/client/add-user/add-user.html
+++ b/client/add-user/add-user.html
@@ -58,6 +58,7 @@
             <div class="phone_button"></div>
         </div>
     </div>
+    <script src="../helpers/short-foncsions.js"></script>
     <script src="../configuration.js"></script>
     <script src="../helpers/http-server.js"></script>
     <script src="../models/user-model.js"></script>
