--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
         </div>
     </div>
 
+    <script src="helpers/short-foncsions.js"></script>
     <script src="configuration.js"></script>
     <script src="helpers/http-server.js"></script>
     <script src="index.js"></script>
