--- a/client/messages/messages.html
+++ b/client/messages/messages.html
@@ -24,24 +24,23 @@
                     <textarea class="writer" name="writer" id="writer" cols="43" rows="6"></textarea>
                     <div class="icon-box">
                         <div class="icon-send" id="send" style="background-image: url(../../images/paper-plane.png);"></div>
-                        <div class="icon-send"></div>
+                        <div class="icon-send" style="background-image: url(../../images/log-out.png);" onclick="window.location.href = '../login/login.html' "></div>
                     </div>
                 </div>
             </div>
                 <div class="phone_button"></div>
             </div>
         </div>
-    </div>
     <!-- <audio id="audio" controls autoplay>
         <source src="../../../../../images/new_message.ogg" type="audio/ogg">
         <source src="../../../../../images/new_message.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio> -->
+      <script src="../helpers/short-foncsions.js"></script>
       <script src="../configuration.js"></script>
       <script src="../helpers/http-server.js"></script>
-        <script src="messages.js"></script>
-        <script src="../models/message-model.js"></script>
-        
+      <script src="../models/message-model.js"></script>
+      <script src="messages.js"></script>
         
     </body>
 
