--- a/client/login/login.html
+++ b/client/login/login.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row" id="pass">
                         <div>
                             <label for="password">Type your Password</label>
                         </div>
@@ -42,12 +42,13 @@
             </div>
             <div class="phone_button"></div>
         </div>
-    </div>
 
+    <script src="../helpers/short-foncsions.js"></script>
     <script src="../configuration.js"></script>
     <script src="../helpers/http-server.js"></script>
-    <script src="login.js"></script>
     <script src="../models/user-model.js"></script>
+    <script src="../helpers/show-errors.js"></script>
+    <script src="login.js"></script>
    
 </body>
 
