--- a/client/messages/messages.html
+++ b/client/messages/messages.html
@@ -43,6 +43,7 @@
     <script src="../configuration.js"></script>
     <script src="../helpers/http-server.js"></script>
     <script src="../models/message-model.js"></script>
+    <script src="../helpers/show-errors.js"></script>
     <script src="messages.js"></script>
 
 </body>
