add menu to edit or delete obj

--- a/client/index.html
+++ b/client/index.html
@@ -21,8 +21,9 @@
     <script src="helpers/short-foncsions.js"></script>
     <script src="configuration.js"></script>
     <script src="helpers/http-server.js"></script>
-    <script src="index.js"></script>
+    <script src="helpers/show-errors.js"></script>
     <script src="models/user-model.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
