--- a/client/add-user/add-user.html
+++ b/client/add-user/add-user.html
@@ -24,7 +24,7 @@
                             <label for="username">Type your User Name</label>
                         </div>
                         <div>
-                            <input type="text" name="username" id="username">
+                            <input type="text" name="username" id="username" dir="auto">
                         </div>
                     </div>
 
@@ -33,7 +33,7 @@
                             <label for="email">Type your Email</label>
                         </div>
                         <div id="email-box">
-                            <input type="text" name="email" id="email">
+                            <input type="text" name="email" id="email" dir="auto">
                         </div>
                     </div>
                     <div class="row">
@@ -41,7 +41,7 @@
                             <label for="password">Type your Password</label>
                         </div>
                         <div>
-                            <input type="password" name="password" id="password">
+                            <input type="password" name="password" id="password" dir="auto">
                         </div>
                     </div>
                     <div class="row">
@@ -49,7 +49,7 @@
                             <label for="phone">Type your Phone Number</label>
                         </div>
                         <div>
-                            <input type="text" name="phone" id="phone">
+                            <input type="text" name="phone" id="phone" dir="auto">
                         </div>
                     </div>
                     <button type="button" onclick="onSubmit()">Submit</button>
