--- a/client/login/login.html
+++ b/client/login/login.html
@@ -24,7 +24,7 @@
                             <label for="email">Type your User Email</label>
                         </div>
                         <div>
-                            <input type="text" name="email" id="email">
+                            <input type="text" name="email" id="email" dir="auto">
                         </div>
                     </div>
 
@@ -33,7 +33,7 @@
                             <label for="password">Type your Password</label>
                         </div>
                         <div>
-                            <input type="password" name="password" id="password">
+                            <input type="password" name="password" id="password" dir="auto">
                         </div>
                     </div>
                     <button type="button" onclick="onSubmit()">Submit</button>
