--- a/client/messages/messages.html
+++ b/client/messages/messages.html
@@ -22,7 +22,7 @@
                 <div class="phone_screen_msg" id="phone_screen_msg">
                 </div>
                 <div class="writer-box">
-                    <textarea class="writer" name="writer" id="writer" cols="43" rows="6"></textarea>
+                    <textarea class="writer" name="writer" id="writer" cols="43" rows="6" dir="auto"></textarea>
                     <div class="icon-box">
                         <div class="icon-send" id="send" style="background-image: url(../../images/paper-plane.png);">
                         </div>
@@ -34,11 +34,16 @@
             <div class="phone_button"></div>
         </div>
     </div>
+
+
+
     <!-- <audio id="audio" controls autoplay>
         <source src="../../../../../images/new_message.ogg" type="audio/ogg">
         <source src="../../../../../images/new_message.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio> -->
+        Your browser does not support the audio element.
+    </audio> -->
+    <script src="../libaries/sockjs-client/sockjs.min.js"></script>
+    <script src="../libaries/stomp-websocket/stomp.min.js"></script>
     <script src="../helpers/short-foncsions.js"></script>
     <script src="../configuration.js"></script>
     <script src="../helpers/http-server.js"></script>
