--- a/client/index.html
+++ b/client/index.html
@@ -14,15 +14,17 @@
         <div class="phone">
             <div class="phone_mic"></div>
             <div class="phone_screen" id="phone_screen"></div>
+            <div class="icon-send log-out" id="log-out" style="background-image: url(../../images/log-out.png);"
+                onclick="window.location.href = 'login/login.html' "></div>
             <div class="phone_button"></div>
         </div>
     </div>
 
+    <script src="models/user-model.js"></script>
     <script src="helpers/short-foncsions.js"></script>
-    <script src="configuration.js"></script>
     <script src="helpers/http-server.js"></script>
     <script src="helpers/show-errors.js"></script>
-    <script src="models/user-model.js"></script>
+    <script src="configuration.js"></script>
     <script src="index.js"></script>
 </body>
 
