--- a/client/messages/messages.html
+++ b/client/messages/messages.html
@@ -17,7 +17,7 @@
                 <div class="member">
                     <img src="../../images/pngwing.com (1).png">
                     <div class="name-in-list" id="user_name"></div>
-                    <button type="button" class="back" onclick="location.href = '../index.html'">></button>
+                    <button type="button" id="back" class="back" onclick="location.href = '../index.html'">></button>
                 </div>
                 <div class="phone_screen_msg" id="phone_screen_msg">
                 </div>
@@ -26,11 +26,11 @@
                     <div class="icon-box">
                         <div class="icon-send" id="send" style="background-image: url(../../images/paper-plane.png);">
                         </div>
-                        <div class="icon-send" style="background-image: url(../../images/log-out.png);"
-                            onclick="window.location.href = '../login/login.html' "></div>
                     </div>
                 </div>
             </div>
+            <div class="icon-send log-out" id="log-out" style="background-image: url(../../images/log-out.png);"
+                onclick="window.location.href = '../login/login.html' "></div>
             <div class="phone_button"></div>
         </div>
     </div>
