--- a/client/login/login.html
+++ b/client/login/login.html
@@ -15,13 +15,13 @@
             <div class="phone_mic"></div>
             <div class="phone_screen" id="phone_screen">
                 <div class="selector">
-                    <div class="select active">Login</div>
-                    <div class="select non-active" onclick="location.href = '../add-user/add-user.html' ">Register</div>
+                    <div class="select active" id="login">Login</div>
+                    <div class="select non-active" id="register" onclick="location.href = '../add-user/add-user.html' ">Register</div>
                 </div>
-                <form method="post" id="login">
+                <form method="post" id="login-form">
                     <div class="row">
                         <div>
-                            <label for="email">Type your User Email</label>
+                            <label for="email" id="email_label">Type your User Email</label>
                         </div>
                         <div>
                             <input type="text" name="email" id="email" dir="auto">
@@ -30,13 +30,13 @@
 
                     <div class="row" id="pass">
                         <div>
-                            <label for="password">Type your Password</label>
+                            <label for="password" id="password_label">Type your Password</label>
                         </div>
                         <div>
                             <input type="password" name="password" id="password" dir="auto">
                         </div>
                     </div>
-                    <button type="button" onclick="onSubmit()">Submit</button>
+                    <button type="button" id="submit" onclick="onSubmit()"></button>
                 </form>
             </div>
         </div>
@@ -49,7 +49,6 @@
     <script src="../models/user-model.js"></script>
     <script src="../helpers/show-errors.js"></script>
     <script src="login.js"></script>
-
 </body>
 
 </html>
