--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,13 @@
         <div class="phone">
             <div class="phone_mic"></div>
             <div class="phone_screen" id="phone_screen"></div>
-            <div class="icon-send log-out" id="log-out" style="background-image: url(../../images/log-out.png);"
-                onclick="window.location.href = 'login/login.html' "></div>
-            <div class="phone_button"></div>
+                <div class="phone-buttons" >
+                    <div class="log-out btn" id="language" style="background-image: url(../../images/language.png);"
+                    onclick="changeLanguage()"></div>
+                    <div class="phone_button btn" id="back"></div>
+                    <div class="log-out btn" id="log-out" style="background-image: url(../../images/log-out.png);"
+                    onclick="window.location.href = '../login/login.html' "></div>
+                </div>
         </div>
     </div>
 
