--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
                     onclick="changeLanguage()"></div>
                     <div class="phone_button btn" id="back"></div>
                     <div class="log-out btn" id="log-out" style="background-image: url(../../images/log-out.png);"
-                    onclick="window.location.href = '../login/login.html' "></div>
+                    onclick="logOut()"></div>
                 </div>
         </div>
     </div>
