--- a/client/login/login.html
+++ b/client/login/login.html
@@ -39,8 +39,14 @@
                     <button type="button" id="submit" onclick="onSubmit()"></button>
                 </form>
             </div>
+            <div class="phone-buttons" >
+                <div class="log-out btn" id="language" style="background-image: url(../../images/language.png);"
+                onclick="changeLanguage()"></div>
+                <div class="phone_button btn" id="back" onclick="location.href = '../index.html'"></div>
+                <div class="log-out btn" id="log-out" style="background-image: url(../../images/log-out.png);"
+                onclick="logOut()"></div>
+            </div>
         </div>
-        <div class="phone_button"></div>
     </div>
 
     <script src="../helpers/short-foncsions.js"></script>
