--- a/client/messages/messages.html
+++ b/client/messages/messages.html
@@ -15,9 +15,8 @@
             <div class="phone_mic"></div>
             <div class="phone_screen" id="phone_screen">
                 <div class="member">
-                    <img src="../../images/pngwing.com (1).png">
+                    <img id="member_img">
                     <div class="name-in-list" id="user_name"></div>
-                    <!-- <button type="button" id="back" class="back" onclick="location.href = '../index.html'">></button> -->
                 </div>
                 <div class="phone_screen_msg" id="phone_screen_msg">
                 </div>
@@ -34,7 +33,7 @@
                 onclick="changeLanguage()"></div>
                 <div class="phone_button btn" id="back" onclick="location.href = '../index.html'"></div>
                 <div class="log-out btn" id="log-out" style="background-image: url(../../images/log-out.png);"
-                onclick="window.location.href = '../login/login.html' "></div>
+                onclick="logOut()"></div>
             </div>
         </div>
     </div>
