--- a/client/add-user/add-user.html
+++ b/client/add-user/add-user.html
@@ -56,7 +56,7 @@
                             <label id="r_profile_label" for="profile" dir="auto">בחר תמונת פרופיל</label>
                         </div>
                         <div>
-                                <input type="file" name="profile" id="profile">
+                                <input type="file" name="profile" id="profile" accept="image/png, image/jpeg">
                         </div>
                         <img id="image" class="image"  alt="עדיין לא העלת את התמונה">
                     </div>
